deploy/shopping-cart/templates/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-mongodb
  labels:
    app: shopping-cart
spec:
  ports:
    - port: 27017
  selector:
    app: shopping-cart
    tier: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: shopping-cart
spec:
  selector:
    matchLabels:
      app: shopping-cart
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shopping-cart
        tier: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
